Fixed styles - better navbar - fixed search icon size on mobile - better error pages - remade css animations

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -28,3 +28,12 @@ a:hover {
 svg * {
     transform-box: fill-box;
 }
+
+.content {
+    margin: 2rem;
+}
+
+@keyframes rotate-third {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(120deg); }
+}
